# hitalent-test

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  task.py  taskmanager.py  tasks.json
